[package]
name = "straycrab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bincode = "1.3.3"
dotenv = "0.15.0"
hound = "3.5.1"
log = "0.4.20"
ndarray = "0.15.6"
npyz = {version = "0.8.3", features = ['npz', 'derive']}
rand = "0.8.5"
rsworld = "0.1.0"
rsworld-sys = "0.1.0"
serde = {version = "1.0.196", features = ['derive']}
tqdm = "0.6.0"
zstd = "0.13.0"
